# Sauron-Python

./: pyproject.toml
sauron_python/: __init__.py  __main__.py  sauron_sdk.py
sauron_python/core/: async_http_transport.py  async_worker.py  suron_client.py
sauron_python/core/integrations/: __init__.py  excepthook.py  logging.py
sauron_python/models/: envelope.py  execution_context.py
tests/: test_worker.py
